RESOLVED FIXED110905
[BlackBerry] YouTube media player fullscreen button does not work
https://bugs.webkit.org/show_bug.cgi?id=110905
Summary [BlackBerry] YouTube media player fullscreen button does not work
John Griggs
Reported 2013-02-26 13:09:44 PST
The fullscreen button on the media controls for HTML5 video from YouTube does not actually put the video element into fullscreen mode.
Attachments
Patch (1.83 KB, patch)
2013-02-27 07:29 PST, John Griggs
no flags
John Griggs
Comment 1 2013-02-27 07:29:05 PST
WebKit Review Bot
Comment 2 2013-02-27 10:21:01 PST
Comment on attachment 190517 [details] Patch Clearing flags on attachment: 190517 Committed r144209: <http://trac.webkit.org/changeset/144209>
WebKit Review Bot
Comment 3 2013-02-27 10:21:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.