Fix bug in HTML5 Fullscreen API implementation that was preventing YouTube HTML5 media controls fullscreen button from working properly. https://bugs.webkit.org/show_bug.cgi?id=110905

Patch by John Griggs <jgriggs@rim.com> on 2013-02-27
Reviewed by Yong Li.

Return true from ChromeClientBlackBerry::supportsFullScreenForElement instead of the negation of the boolean flag (withKeyboard) passed in.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::supportsFullScreenForElement):

Canonical link: https://commits.webkit.org/129297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144209 268f45cc-cd09-0410-ab3c-d52691b4dbfc